<resources>
    <string name="app_name">todo_frag</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">List notes</string>
    <string name="add_fragment_label">Add note</string>
    <string name="update_fragment_label">Update note</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_list_fragment">Hello list fragment</string>
    <string name="hello_add_fragment">Hello add fragment. Arg: %1$s</string>
    <string name="hello_update_fragment">Hello update fragment. Arg: %1$s</string>
    <string name="denied_toast">Permission Denined</string>
    <string name="make_foto">Make foto</string>
    <string name="need_permission">Need Permision</string>
    <string name="something_wrong">Something wrong</string>
    <string name="date_time">Date and Time</string>
    <string name="set_date">Date</string>
    <string name="name_of_note">Name of note</string>
    <string name="description_of_note">description of note</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="foto_for_note">Foto for note</string>
    <string name="set_time">Time</string>
</resources>